--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,9 @@
   box-sizing: border-box;
 }
 
-body {
+html, body {
   margin: 0;
+  background: var(--bg-primary);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
